--- a/.github/workflows/main2.yml
+++ b/.github/workflows/main2.yml
@@ -31,6 +31,7 @@ jobs:
           UNITY_PASSWORD: ${{ secrets.UNITY_PASSWORD }}
         with:
           githubToken: ${{ secrets.GITHUB_TOKEN }}
+          projectPath: My project/
 
       # Build
       - name: Build project
