--- a/.github/workflows/main2.yml
+++ b/.github/workflows/main2.yml
@@ -44,6 +44,7 @@ jobs:
         with:
           targetPlatform: Android
           projectPath: My project/
+          allowDirtyBuild: true
           
       #Upload
       - uses: actions/upload-artifact@v3
